added basic mediea quieries so that the nav options are at least clickable

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 *{
   margin: 0 auto;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .App {
@@ -521,7 +521,7 @@ overflow: hidden;
 
 
 .navBar{
-  display: inline-flex;
+  display:flex;
   flex-direction: row;
   width: 100vw;
   height: 10vh;
@@ -536,7 +536,7 @@ overflow: hidden;
   position: absolute;
   display: inline-flex;
   flex-direction: row;
-  margin-left: 52vw;
+  margin-left: 84vw;
   width: 70vw;
   height: 100vh;
   z-index: 10;
@@ -545,31 +545,34 @@ overflow: hidden;
 }
 
 .logo{
-  margin-left: 10vw;
-  margin-top: .4vh;
+  margin-left: 2vw;
+  margin-top: 3.5vh;
   background-image: url("./charleslamb3264.png");
   background-size: cover;
-  background-size: 110%;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: cover;
-  height: 62px;
-  width: 280px;
+  height: 82px;
+  width: 100px;
   padding-right: 10px;
   overflow: visible;
 }
 
 .navOptions{
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  margin-left: 7vw;
+  margin-left: 3vw;
   margin-top: 1.7vh;
   padding-top: 1.4vh;
+  height: 100vh;
+  width: 60vw;
+  overflow: visible;
 }
 
 .home{
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -580,7 +583,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -591,18 +594,19 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
   padding-right: 1vw;
+  overflow: visible;
 }
 
 .about{
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -613,7 +617,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -624,7 +628,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
 
@@ -633,7 +637,7 @@ overflow: hidden;
 .home:hover{
   color: orange;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -644,7 +648,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: orange;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -655,7 +659,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: orange;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -666,7 +670,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: orange;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -677,7 +681,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: orange;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -688,7 +692,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: orange;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bolder;
   z-index: 10;
 
@@ -698,18 +702,18 @@ overflow: hidden;
   display: inline-flex;
   flex-direction: row;
   margin-top: 180px;
-  margin-left: 30px;
+  margin-left: 28px;
   width: 40vw;
   height: 50vh;
   overflow: visible;
 }
 
 .socialMediaButtons{
-  width: 100px;
-  height: 200px;
+  width: 30px;
+  height: 40px;
   background: white;
   border-radius: 100px / 50px;
-  left: 35px;
+  left: 5px;
   margin-top: 42px;
   position: absolute;
   overflow: visible;
@@ -721,9 +725,9 @@ overflow: hidden;
   margin-top: 2rem;
   margin-left: 9.7vw;
   font-family: 'Indie Flower', cursive;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bolder;
-  letter-spacing: .3rem;
+  letter-spacing: .1rem;
   color: rgb(0, 34, 102);
   position: absolute;
 }
@@ -813,10 +817,11 @@ overflow: hidden;
   flex-direction: row;
   background-image: url('./_DPL1167-removebg-preview.png');
   background-repeat: no-repeat;
-  margin-top: 126px;
-  margin-left: 20vw;
-  width: 30vw;
-  height: 80vh;
+  background-size: contain;
+  margin-top: 146px;
+  margin-left: .5vw;
+  width: 65vw;
+  height: 50vh;
   z-index: 11;
   position: absolute;
 }
