umcommented the media queries for phone screens

--- a/src/App.css
+++ b/src/App.css
@@ -469,7 +469,7 @@ overflow: hidden;
   margin-left: 19vw;
 }
 
-/* @media only screen and (max-width: 640px){
+@media only screen and (max-width: 640px){
 
   @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
@@ -947,4 +947,4 @@ overflow: hidden;
   margin-left: 19vw;
 }
 }
- */
+
