--- a/src/App.css
+++ b/src/App.css
@@ -481,7 +481,7 @@ overflow: hidden;
 .App {
   height: 100vh;
   width: 100vw;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -536,12 +536,12 @@ overflow: hidden;
   position: absolute;
   display: inline-flex;
   flex-direction: row;
-  margin-left: 74vw;
-  width: 80vw;
+  margin-left: 72vw;
+  width: 82vw;
   height: 100vh;
   z-index: 10;
   transform: skew(31deg);
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .logo{
@@ -555,24 +555,24 @@ overflow: hidden;
   height: 82px;
   width: 80px;
   padding-right: 10px;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .navOptions{
   display: flex;
   flex-direction: row;
-  margin-left: 3vw;
+  margin-left: 1vw;
   margin-top: 1.7vh;
   padding-top: 1.4vh;
   height: 100vh;
-  width: 60vw;
+  width: 78vw;
   overflow: visible;
 }
 
 .home{
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -583,7 +583,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -594,7 +594,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -606,7 +606,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -617,7 +617,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -628,7 +628,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: bolder;
   z-index: 10;
 
