--- a/src/App.css
+++ b/src/App.css
@@ -780,9 +780,9 @@ overflow: hidden;
 
 .buttons{
   height: 8vh;
-  width: 30vw;
+  width: 45vw;
   margin-top: 18.2rem;
-  margin-left: 10vw;
+  margin-left: 4vw;
   position: absolute;
   display: inline-flex;
   flex-direction: row;
@@ -794,8 +794,10 @@ overflow: hidden;
   background-color: rgb(0, 34, 102);
   color: white;
   font-weight: bold;
+  font-size: 11px;
+  text-align: center;
   border-radius: 5px;
-  width: 120px;
+  width: 80px;
   height: 50px;
   border: solid rgb(0, 26, 77);
   overflow: visible;
@@ -805,9 +807,10 @@ overflow: hidden;
   background-color: rgb(249, 140, 31);
   color: white;
   font-weight: bolder;
-  margin-left: .1vw;
+  font-size: 11px;
+  margin-left: 1vw;
   border-radius: 5px;
-  width: 120px;
+  width: 80px;
   height: 50px;
   border: solid orange;
 }
