added media queries for the challenges css file that suits smartphones

--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -183,3 +183,7 @@ background-color: rgb(249, 140, 31);
     font-family: 'Zen Dots', cursive;
 
 }
+
+@media only screen and (max-width: 640px){
+
+}
