--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -186,4 +186,185 @@ background-color: rgb(249, 140, 31);
 
 @media only screen and (max-width: 640px){
 
+
+    #fullPagePic{
+        background-image: url("../benchpressPic.png");
+        background-position: center;
+        background-size: 100%;
+        height: 100vh;
+        width: 100vw;
+        display: transparent;
+       /* opacity: 97%;*/
+        z-index: 24;
+    }
+    
+    #blueOverlay{
+        background-color: rgb(0, 34, 102);
+        height: 100vh;
+        width: 100vw;  
+        z-index: 23;
+        /* opacity: 80%; */
+    }
+    
+    #title{
+        z-index: 22;
+        text-align: center;
+        height: 17vh;
+        width: 55vw;
+        position: absolute;
+        margin-left: 26vw;
+        color: rgb(249, 140, 31);
+        margin-top: 18vw;
+        font-family: 'Zen Dots', cursive;
+        font-size: 30px;
+        border-bottom: white 2px solid;
+    }
+    
+    #arrayBuilder{
+        z-index: 23;
+        text-align: center;
+        height: 51.5vh;
+        width: 37vw;
+        position: absolute;
+        visibility: hidden;
+        margin-left: 35vw;
+        background-image: url('../arrayBuilder.png');
+        background-size: contain;
+        overflow: scroll;
+        font-size: 23px;
+        color: white;
+        font-weight: bolder;
+        margin-top: 9vw;
+        font-family: 'Karantina', cursive;
+    }
+    
+    #arrayBuilderDescription{
+        z-index: 23;
+        text-align: center;
+        height: 51.5vh;
+        width: 37vw;
+        position: absolute;
+        visibility: hidden;
+        margin-left: 35vw;
+        background-color: rgb(0, 34, 102);
+        overflow: scroll;
+        
+        font-size: 23px;
+        color: white;
+        font-weight: bolder;
+        margin-top: 9vw;
+        font-family: 'Karantina', cursive;
+    }
+    
+    #prioritizeDescription{
+        z-index: 23;
+        text-align: center;
+        height: 51.5vh;
+        width: 37vw;
+        position: absolute;
+        visibility: hidden;
+        margin-left: 35vw;
+        background-color: rgb(0, 34, 102);
+        overflow: scroll;
+        font-size: 23px;
+        color: white;
+        font-weight: bolder;
+        margin-top: 9vw;
+        font-family: 'Karantina', cursive;
+    }
+    
+    #intersectionDescription{
+        z-index: 23;
+        text-align: center;
+        height: 51.5vh;
+        width: 37vw;
+        position: absolute;
+        visibility: hidden;
+        margin-left: 35vw;
+        background-color: rgb(0, 34, 102);
+        overflow: scroll;
+        font-size: 23px;
+        color: white;
+        font-weight: bolder;
+        margin-top: 9vw;
+        font-family: 'Karantina', cursive;
+    }
+    
+    #findTheOutlierDescription{
+        z-index: 23;
+        text-align: center;
+        height: 51.5vh;
+        width: 37vw;
+        position: absolute;
+        visibility: hidden;
+        margin-left: 35vw;
+        background-color: rgb(0, 34, 102);
+        overflow: scroll;
+        font-size: 23px;
+        color: white;
+        font-weight: bolder;
+        margin-top: 9vw;
+        font-family: 'Karantina', cursive;
+    }
+    
+    #titleDescription{
+        z-index: 22;
+        text-align: center;
+        height: 51.5vh;
+        width: 37vw;
+        position: absolute;
+        margin-left: 35vw;
+        font-size: 23px;
+        color: white;
+        font-weight: bolder;
+        margin-top: 40vw;
+        font-family: 'Karantina', cursive;
+    }
+    
+    #challengesFooter{
+        z-index: 22;
+        height: 24vh;
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        margin-left: 6vw;
+        color: rgb(249, 140, 31);
+        margin-top: 33.5vw;
+    }
+    
+    #challengesIcons{
+    height: 11vh;
+    display: inline-flex;
+    flex-direction: row;
+    width: 80vw;
+    color: rgb(249, 140, 31);
+    margin-top: 1vh;
+    }
+    
+    .challengeIcon{
+    height: 7vh;
+    width: 5vw;
+    border-radius: 50%;
+    padding: 10px 3px;
+    border: dotted white 2.1px;
+    background-color: rgb(249, 140, 31);
+    }
+    
+    #challengesNames{
+        display: flex;
+        flex-direction: row;
+        width: 80vw;
+        margin-left: 5vw;
+    }
+    
+    .challengeName{
+        height: 6vh;
+        width: 9vw;
+        margin-top: 1vh;
+        color: white;
+        margin-right: 2vw;
+        font-family: 'Zen Dots', cursive;
+    
+    }
 }
