--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -317,26 +317,29 @@ background-color: rgb(249, 140, 31);
         font-size: 23px;
         color: white;
         font-weight: bolder;
-        margin-top: 40vw;
+        margin-top: 50vw;
         font-family: 'Karantina', cursive;
     }
     
     #challengesFooter{
         z-index: 22;
         height: 24vh;
-        width: 90vw;
+        width: 100vw;
         display: flex;
+        border: solid black 2px;
         flex-direction: column;
         position: absolute;
-        margin-left: 6vw;
+        margin-left: 1vw;
         color: rgb(249, 140, 31);
-        margin-top: 33.5vw;
+        margin-top: 140.5vw;
     }
     
     #challengesIcons{
     height: 11vh;
     display: inline-flex;
     flex-direction: row;
+    border: solid black 2px;
+    margin-left: 2vw;
     width: 80vw;
     color: rgb(249, 140, 31);
     margin-top: 1vh;
@@ -344,9 +347,9 @@ background-color: rgb(249, 140, 31);
     
     .challengeIcon{
     height: 7vh;
-    width: 5vw;
+    width: 10vw;
     border-radius: 50%;
-    padding: 10px 3px;
+    padding: 10px 4px;
     border: dotted white 2.1px;
     background-color: rgb(249, 140, 31);
     }
@@ -354,16 +357,19 @@ background-color: rgb(249, 140, 31);
     #challengesNames{
         display: flex;
         flex-direction: row;
-        width: 80vw;
-        margin-left: 5vw;
+        width: 100vw;
+        margin-left: -1vw;
+        border: solid black 2px;
+
     }
     
     .challengeName{
         height: 6vh;
-        width: 9vw;
+        width: 13vw;
         margin-top: 1vh;
         color: white;
-        margin-right: 2vw;
+        margin-left: 5vw;
+        font-size: 6px;
         font-family: 'Zen Dots', cursive;
     
     }
