--- a/src/components/Lamb.css
+++ b/src/components/Lamb.css
@@ -44,11 +44,12 @@
 }
 
 #topSkewedDiv{
-    height: 9.5vh;
-    width: 23vw;
+    height: 6.5vh;
+    width: 24vw;
     border-top-right-radius: 40px;
     border-bottom-right-radius: 40px;
-    margin-left: 9.5vw;
+    margin-top: 1.5vh;
+    margin-left: .5vw;
     background-color: #062f55;
     transform: skew(66deg, 4deg) rotate(20deg, 40deg);
     margin-bottom: 20px;
