actually added the media queries because before it was just the css properties that affected the regular full scale site

--- a/src/components/Lamb.css
+++ b/src/components/Lamb.css
@@ -23,6 +23,72 @@
 #lambDescriptionTitle{
     position: absolute;
     margin-top: 12vh;
+    margin-left: 14vw;
+    font-size: 35px;
+    color: #062f55;
+    text-align: center;
+    border-bottom: white 1px solid;
+    border-bottom-width: .2vw;
+}
+
+#lambDesctiption{
+    position: absolute;
+    text-align: center;
+    height: 60vh;
+    width: 40vw;
+    margin-top: 22vh;
+    margin-left: 2vw;
+    font-size: 28px;
+    color: #062f55;
+    text-align: center;
+}
+
+#topSkewedDiv{
+    height: 9.5vh;
+    width: 23vw;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
+    margin-left: 9.5vw;
+    background-color: #062f55;
+    transform: skew(66deg, 4deg) rotate(20deg, 40deg);
+    margin-bottom: 20px;
+}
+
+#rightPicSide{
+    display:inline-flex;
+    background-image: url('../Mount-Everest.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 50vw;
+    height: 100vh;
+}
+
+@media only screen and (max-width: 640px){
+    @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Karantina:wght@300;700&family=Zen+Dots&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+#fullLambPage{
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 100vw;
+}
+
+#leftOrangeSide{
+    display:inline-flex;
+    background-color: rgb(249, 140, 31);
+    width: 54.4vw;
+    height: 100vh;
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+}
+
+#lambDescriptionTitle{
+    position: absolute;
+    margin-top: 12vh;
     margin-left: 3vw;
     font-size: 35px;
     color: #062f55;
@@ -64,4 +130,5 @@
     background-repeat: no-repeat;
     width: 50vw;
     height: 100vh;
+}
 }
