changed resume to new version on button click

--- a/src/App.css
+++ b/src/App.css
@@ -443,7 +443,7 @@ overflow: hidden;
 #resumeDiv{
   visibility: hidden;
   position: absolute;
-  background-image: url("./BestCharlesLambResume.png");
+  background-image: url("./Charles_Lamb_Resume_00_00.jpg");
   background-position: cover;
   background-size: 100%;
   background-repeat: no-repeat;
