added media queries to home page

--- a/src/App.css
+++ b/src/App.css
@@ -541,13 +541,13 @@ overflow: hidden;
   width: 82vw;
   height: 100vh;
   z-index: 10;
-  transform: skew(31deg, -20deg);
+  transform: skew(25.5deg, -25deg);
   overflow: hidden;
 }
 
 .logo{
   margin-left: 1vw;
-  margin-top: 3.5vh;
+  margin-top: 4.5vh;
   background-image: url("./charleslamb3264.png");
   background-size: cover;
   background-size: 100%;
@@ -562,18 +562,18 @@ overflow: hidden;
 .navOptions{
   display: flex;
   flex-direction: row;
-  margin-left: .3vw;
-  margin-top: 1.7vh;
+  margin-left: .005vw;
+  margin-top: 3vh;
   padding-top: 1.4vh;
   height: 100vh;
-  width: 78vw;
+  width: 65vw;
   overflow: visible;
 }
 
 .home{
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -584,7 +584,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -595,7 +595,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -607,7 +607,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -618,7 +618,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bolder;
   z-index: 10;
   border-right: solid rgb(134, 193, 212);
@@ -629,7 +629,7 @@ overflow: hidden;
   margin-left: 1vw;
   color: white;
   font-family: 'Indie Flower', cursive;
-  font-size: 13px;
+  font-size: 10px;
   font-weight: bolder;
   z-index: 10;
 
@@ -703,7 +703,7 @@ overflow: hidden;
   display: inline-flex;
   flex-direction: row;
   margin-top: 180px;
-  margin-left: 28px;
+  margin-left: 35px;
   width: 40vw;
   height: 50vh;
   overflow: visible;
@@ -715,18 +715,18 @@ overflow: hidden;
   background: white;
   border-radius: 100px / 50px;
   left: 5px;
-  margin-top: 42px;
+  margin-top: 63px;
   position: absolute;
   overflow: visible;
 }
 
 .greeting{
   height: 8vh;
-  width: 20vw;
+  width: 25vw;
   margin-top: 4rem;
   margin-left: 12.7vw;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bolder;
   letter-spacing: .1rem;
   color: rgb(0, 34, 102);
@@ -736,31 +736,31 @@ overflow: hidden;
 .name{
   height: 8vh;
   width: 20vw;
-  margin-top: 5.5rem;
-  margin-left: 15vw;
+  margin-top: 6.8rem;
+  margin-left: 13vw;
   font-family: 'Indie Flower', cursive;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bolder;
 }
 
 .topSlogan{
   height: 5vh;
   width: 34vw;
-  margin-top: 9rem;
+  margin-top: 11rem;
   margin-left: 12vw;
   position: absolute;
   color: rgb(249, 140, 31);
   font-weight: bold;
-  font-size: 7px;
+  font-size: 13px;
   font-family: 'Courier New', Courier, monospace;
   overflow: visible;
 }
 
 .bottomSlogan{
-  height: 5vh;
+  height: 6vh;
   width: 34vw;
-  font-size: 7px;
-  margin-top: 11rem;
+  font-size: 13px;
+  margin-top: 15rem;
   margin-left: 12vw;
   position: absolute;
   color: rgb(0, 34, 102);
@@ -773,22 +773,21 @@ overflow: hidden;
   height: 10vh;
   width: 90vw;
   position: absolute;
-  margin-top: 18.2rem;
-  margin-left: -5vw;
+  margin-top: 20rem;
+  margin-left: -8vw;
   display: inline-flex;
   overflow: visible;
 }
 
 .buttons{
   height: 8vh;
-  width: 45vw;
-  margin-top: 23.2rem;
-  margin-left: 4vw;
+  width: 75vw;
+  margin-top: 26.2rem;
+  margin-left: 1vw;
   position: absolute;
   display: inline-flex;
   flex-direction: row;
   overflow:visible;
-
 }
 
 .projectButton{
@@ -797,7 +796,7 @@ overflow: hidden;
   font-weight: bold;
   font-size: 11px;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 25px;
   width: 80px;
   height: 50px;
   border: solid rgb(0, 26, 77);
@@ -810,7 +809,7 @@ overflow: hidden;
   font-weight: bolder;
   font-size: 11px;
   margin-left: 1vw;
-  border-radius: 5px;
+  border-radius: 25px;
   width: 80px;
   height: 50px;
   border: solid orange;
@@ -819,12 +818,12 @@ overflow: hidden;
 .rightFoldSection{
   display: inline-flex;
   flex-direction: row;
-  background-image: url('./_DPL1167-removebg-preview.png');
+  background-image: url('./fifthPicAttempt.png');
   background-repeat: no-repeat;
   background-size: contain;
-  margin-top: 146px;
-  margin-left: .5vw;
-  width: 65vw;
+  margin-top: 200px;
+  margin-left: 1vw;
+  width: 50vw;
   height: 50vh;
   z-index: 11;
   position: absolute;
@@ -834,24 +833,23 @@ overflow: hidden;
   background-color: rgb(249, 140, 31);
   display: inline-flex;
   flex-direction: row;
-  margin-top: 190px;
-  margin-right: 500px;
+  margin-top: 220px;
+  margin-right: 490px;
   border: solid black 2px;
   width: 50vw;
   height: 30vh;
   z-index: 10;
   position: absolute;
-  transform: skew(45deg, 30deg);
-  transform: rotate(40deg, 50deg);
+  transform: skew(-8deg, 35deg);
   overflow: hidden;
 }
 
 
 .fa {
-  padding: 20px;
+  padding: 10px;
   font-size: 30px;
-  width: 18px;
-  text-align: lefcentert;
+  width: 20px;
+  text-align: center;
   text-decoration: none;
   border-radius: 50%;
 }
@@ -886,7 +884,7 @@ color: white;
 }
 
 .githubContact{
-width: 40vw;
+width: 35vw;
 height: 10vh;
 overflow: visible;
 position: absolute;
