more media queries

--- a/src/App.css
+++ b/src/App.css
@@ -474,7 +474,6 @@ overflow: hidden;
   @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 *{
-  margin: 0 auto;
   overflow: hidden;
 }
 
@@ -482,40 +481,6 @@ overflow: hidden;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 
@@ -706,7 +671,7 @@ overflow: hidden;
   margin-left: 35px;
   width: 40vw;
   height: 50vh;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .socialMediaButtons{
@@ -776,7 +741,7 @@ overflow: hidden;
   margin-top: 20rem;
   margin-left: -8vw;
   display: inline-flex;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .buttons{
@@ -787,7 +752,7 @@ overflow: hidden;
   position: absolute;
   display: inline-flex;
   flex-direction: row;
-  overflow:visible;
+  overflow:hidden;
 }
 
 .projectButton{
@@ -827,6 +792,7 @@ overflow: hidden;
   height: 50vh;
   z-index: 11;
   position: absolute;
+  overflow: hidden;
 }
 
 .skewedBackgroundDecoration{
