--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -50,3 +50,62 @@
     width: 100%;
     height: 100%;
 }
+
+
+
+@media only screen and (max-width: 640px){
+    @import url('https://fonts.googleapis.com/css2?family=Train+One&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+    
+    .projectsNavDecoratio{
+        position: absolute;
+        background-color: rgb(0, 34, 102);
+        height: 10.5vh;
+        width: 75vw;
+        margin-left: 24vw;
+        border-left-style: dashed;
+        border-bottom-left-radius: 35%95px;
+        border-top-left-radius: 90%75px;
+    }
+    
+    .projectsTitle{
+        color: rgb(249, 140, 31);
+        width: 50vw;
+        position: absolute;
+        font-family: 'Permanent Marker', cursive;
+        margin-left: 22vw;
+        margin-top: 10vh;
+        font-size: 40px;
+        font-weight: bold;
+    }
+    
+    .projectsInfoDiv{
+        margin-left: 12vw;
+        margin-top: 18vh;
+        width: 72vw;
+        height: 7vh;
+        color: black;
+        font-family: 'Permanent Marker', cursive;
+        font-size: 20px;
+        overflow: visible;
+
+    }
+    
+    #cardsDiv{
+        margin-left: .2vw;
+        position: absolute;
+        height: 75vh;
+        width: 99vw;
+        display: inline-flex;
+        flex-direction: row;
+    }
+    
+    #projectsBackground{
+        z-index: -1;
+        background-color: white;
+        width: 100%;
+        height: 100%;
+    }
+     
+}
