--- a/src/App.css
+++ b/src/App.css
@@ -896,15 +896,15 @@ overflow: hidden;
 #resumeDiv{
   visibility: hidden;
   position: absolute;
-  background-image: url("./BestCharlesLambResume.png");
-  background-position: cover;
+  background-image: url("./Charles_Lamb_Resume_00_00.jpg");
+  background-position: contain;
   background-size: 100%;
   background-repeat: no-repeat;
   z-index: 10001;
-  height: 90vh;
-  width: 35vw;
+  height: 34vh;
+  width: 55vw;
   border: solid rgb(249, 140, 31) 4px;
-  top: .2vh;
+  top: 25vh;
   bottom: 10px;
   left: 20vw;
   overflow: visible;
@@ -918,8 +918,8 @@ overflow: hidden;
   width: 120px;
   height: 50px;
   border: solid rgb(0, 26, 77);
-  margin-top: 91vh;
-  margin-left: 19vw;
+  margin-top: 45vh;
+  margin-left: 15vw;
 }
 }
 
