--- a/src/App.css
+++ b/src/App.css
@@ -315,8 +315,23 @@
 
 .projectButton{
   background-color: rgb(0, 34, 102);
-  color: white;
-  font-weight: bold;
+  color: rgb(249, 140, 31);
+  font-weight: 400;
+  font-size: larger;
+  letter-spacing: 1.5px;
+  border-radius: 5px;
+  width: 120px;
+  height: 50px;
+  border: solid rgb(0, 26, 77);
+  overflow: visible;
+}
+
+.projectButton:hover{
+  background-color: rgb(17, 36, 75);
+  color: rgb(250, 183, 116);
+  font-weight: 400;
+  font-size: larger;
+  letter-spacing: 1.5px;
   border-radius: 5px;
   width: 120px;
   height: 50px;
@@ -326,8 +341,23 @@
 
 .resumeButton{
   background-color: rgb(249, 140, 31);
-  color: white;
-  font-weight: bolder;
+  color: rgb(0, 34, 102);
+  font-weight: 400;
+  font-size: larger;
+  letter-spacing: 1.5px;
+  margin-left: .1vw;
+  border-radius: 5px;
+  width: 120px;
+  height: 50px;
+  border: solid orange;
+}
+
+.resumeButton:hover{
+  background-color: rgb(145, 75, 6);
+  color: rgb(160, 190, 250);
+  font-weight: 400;
+  font-size: larger;
+  letter-spacing: 1.5px;
   margin-left: .1vw;
   border-radius: 5px;
   width: 120px;
