changes to the font size and fixed animation infinite typo

--- a/src/components/Splash.css
+++ b/src/components/Splash.css
@@ -15,7 +15,7 @@
 
 h2{
     position: relative;
-    font-size: 14vw;
+    font-size: 10vw;
     color: #252839;
     -webkit-text-stroke: 0.3vw #393d52;
     text-transform: uppercase;
@@ -32,7 +32,7 @@ h2::before {
     -webkit-text-stroke: 0vw #383e52;
     border-right: 2px solid #01fe87;
     overflow: hidden;
-    animation: animate 6s linear infinte;
+    animation: animate 6s linear infinite;
 }
 
 @keyframes animate
