--- a/src/components/Splash.css
+++ b/src/components/Splash.css
@@ -7,6 +7,7 @@
 
 .splashDiv{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
