changes to the main css file

--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,15 @@
 
 *{
   margin: 0 auto;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  overflow-y: scroll;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -32,18 +22,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
 
@@ -504,13 +483,13 @@ overflow: hidden;
   @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 *{
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .App {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: visible;
 }
 
 
