--- a/src/components/Splash.css
+++ b/src/components/Splash.css
@@ -36,6 +36,17 @@ h2::before {
     animation: animate 6s linear infinite;
 }
 
+h3{
+    position: relative;
+    font-size: 10vw;
+    -webkit-text-stroke: 0.3vw #393d52;
+    text-transform: uppercase; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .projectsDiv {
     width: 100vw;
     height: fit-content;
@@ -51,7 +62,7 @@ h2::before {
     width: 100vw;
     background-color: #252839;;
     overflow: visible;
-    color: #01fe87 !important;
+    color: #01fe87;
 }
 
 .splashButton{
@@ -65,23 +76,30 @@ h2::before {
 
 
 .codingDiv {
-    height: 100%;
-    width: 75vw;
+    height: 100vh;
+    width: 100vw;
     background-color: #01fe87;;
     overflow: visible;
+    color: #383e52;
 }
 
 .contactDiv {
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     background-color: black;
+    color: white;
     overflow: visible;
+    overflow: visible;
+    justify-self: center;
+    align-self: center;
+    margin: 0 auto;
+    font-size: 8vh;
 }
 
 .footerDiv {
     height: 100vh;
     width: 100vw;
-    background-color: white;
+    background-color: silver;
     overflow: visible;
 }
 
