added some outlining for the elements that i will be creating

--- a/src/components/Splash.css
+++ b/src/components/Splash.css
@@ -49,7 +49,7 @@ h3{
 
 .projectsDiv {
     width: 100vw;
-    height: fit-content;
+    height: 100vh;
     background-color: #01fe87;
     overflow: visible;
     justify-self: center;
