--- a/src/components/SampleCard.css
+++ b/src/components/SampleCard.css
@@ -8,6 +8,31 @@
     border: solid 2px red;
     margin: 0 auto;
     margin-bottom: 2vh;
+    overflow: hidden;
+  }
+
+  .projectTechnologiesOutline{
+    margin: 0 auto;
+    width: 10em;
+    height: 30%;
+    border: solid 2px green;
+  }
+
+
+
+  .cardImg{
+    margin: 0 auto;
+    width: 95%;
+    height: 50%;
+    border: solid 2px gold;
+  }
+  
+  
+  
+  .cardFooter{
+    margin: 0 auto;
+    width: 95%;
+    height: 40%;
   }
   
 
